--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   flutter_riverpod: ^3.2.0
+  dio: ^5.9.1
 
 dev_dependencies:
   flutter_test:
