--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.20.2
   flutter_riverpod: ^3.2.0
   dio: ^5.9.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
